tests/ui/uninhabited/uninhabited-patterns.stderr
error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:29:9
   |
LL |         Ok(box _) => (),
   |         ^^^^^^^^^
   |
   = note: this pattern matches no values because `NotSoSecretlyEmpty` is uninhabited
note: the lint level is defined here
  --> $DIR/uninhabited-patterns.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:38:9
   |
LL |         Err(Ok(_y)) => (),
   |         ^^^^^^^^^^^
   |
   = note: this pattern matches no values because `NotSoSecretlyEmpty` is uninhabited

error: unreachable pattern
  --> $DIR/uninhabited-patterns.rs:41:15
   |
LL |     while let Some(_y) = foo() {
   |               ^^^^^^^^
   |
   = note: this pattern matches no values because `NotSoSecretlyEmpty` is uninhabited

error: aborting due to 3 previous errors

